# litsea

./: Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: regression.yml  release.yml
litsea/: Cargo.toml
litsea-cli/: Cargo.toml
litsea-cli/src/: main.rs
litsea/src/: adaboost.rs  lib.rs  segmenter.rs  trainer.rs
resources/: corpus.txt  features.txt  model
scripts/: corpus.sh  wikitexts.sh
src/: adaboost.rs  extract.rs  extractor.rs  lib.rs  main.rs  segmenter.rs  train.rs  trainer.rs
