[package]
name = "litsea"
version = "0.1.0"
edition = "2021"
description = "Litsea is an extreamely compact word segmentation and model training tool implemented in Rust."
documentation = "https://docs.rs/litsea"
homepage = "https://github.com/mosuka/litsea"
repository = "https://github.com/mosuka/litsea"
readme = "README.md"
keywords = ["word", "segmentation", "training", "model"]
categories = ["text-processing"]
license = "MIT"

[features]
default = []

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
ctrlc = "3.4.7"
rayon = "1.10.0"
regex = "1.10.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tempfile = "3.20.0"
