[workspace]
resolver = "3"
members = ["litsea", "litsea-cli"]

[workspace.package]
version = "0.2.0"
edition = "2021"
description = "Litsea is an extreamely compact word segmentation and model training tool implemented in Rust."
documentation = "https://docs.rs/litsea"
homepage = "https://github.com/mosuka/litsea"
repository = "https://github.com/mosuka/litsea"
readme = "README.md"
keywords = ["word", "segmentation", "training", "model"]
categories = ["text-processing"]
license = "MIT"
