[package]
name = "litsea-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
ctrlc = "3.4.7"
litsea = { version = "0.2.0", path = "../litsea" }
